[gd_scene load_steps=2 format=2]

[ext_resource path="res://Weapons/Bullet/Bullet.gd" type="Script" id=2]

[node name="Projectile" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 22, -4 )
polygon = PoolVector2Array( -17.2, -41.1, 43.8, -38.8, 71.2, -21.5, 81.4, -11.6, 82.9, -2.01, 80.3, 5.57, 71.2, 15.2, 46.1, 33.9, -17.7, 34.4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -47.9776, -62.5688 )
scale = Vector2( 2.52064, 1.99761 )
rect = Rect2( 20, 20, 20, 20 )

[node name="Reload" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
